--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,30 +12,46 @@
         android:theme="@style/Theme.Jumpeak"
         tools:targetApi="31">
         <activity
-            android:name=".SplashScreenActivity"
-            android:exported="false"/>
+            android:name=".del.MainActivity"
+            android:exported="false" />
+
         <activity
-            android:name=".Auth.LoginActivity"
+            android:name=".reg.RegEmailActivity"
             android:exported="false" />
         <activity
-            android:name=".Auth.RegSecondPassActivity"
+            android:name=".firstStep.HardSkillActivity"
             android:exported="false" />
         <activity
-            android:name=".Auth.RegFirstPassActivity"
+            android:name=".firstStep.ProfessionActivity"
             android:exported="false" />
         <activity
-            android:name=".Auth.RegMailActivity"
+            android:name=".firstStep.LetsGoActivity"
             android:exported="false" />
+
         <activity
-            android:name=".Auth.WelcomeActivity"
-            android:exported="true">
+            android:name=".Activity.SplashScreenActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:name=".MainActivity"
+            android:name=".auth.view.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".reg.RegSecondPassActivity"
+            android:exported="false" />
+        <activity
+            android:name=".reg.RegFirstPassActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.WelcomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.MainActivity"
             android:exported="false" />
     </application>
 
